backface-visibility: hidden fix again.

--- a/sass/components/_stories.scss
+++ b/sass/components/_stories.scss
@@ -27,6 +27,7 @@
   &__img {
     height: 100%;
     transform: translateX(-4rem);
+    backface-visibility: hidden;
   }
   
   &__text {
